Bug 660013: cleanup gcmember data member declarations in prepration to land the script changes (p=rulohani, r=treilly, sr=lhansen)